--- a/crm/webapp/templates/webapp/navbar.html
+++ b/crm/webapp/templates/webapp/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-center">
-  <a class="navbar-brand main-heading" href="{% url '' %}"> &nbsp; BizBuddy </a>
+  <a class="navbar-brand main-heading"> &nbsp; BizBuddy </a>
   <button
     class="navbar-toggler"
     type="button"
@@ -16,12 +16,12 @@
     <ul class="navbar-nav mr-auto">
       {% if user.is_authenticated %}
       <li class="nav-item">
-        <a class="nav-link" href="{% url '' %}"
+        <a class="nav-link" href="{% url 'dashboard' %}"
           >Dashboard <i class="fa fa-tachometer-alt" aria-hidden="true"></i
         ></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url '' %}"
+        <a class="nav-link" href="{% url 'logout' %}"
           >Sign out <i class="fa fa-sign-out-alt" aria-hidden="true"></i
         ></a>
       </li>
