--- a/crm/webapp/templates/webapp/view-record.html
+++ b/crm/webapp/templates/webapp/view-record.html
@@ -1,39 +1,51 @@
-{% extends 'webapp/base.html' %} {% block content%}
+{% extends 'webapp/base.html' %} {% block content %}
 
-<div class="card">
+<div class="card mt-4">
   <div class="card-body">
-    <i class="fa fa-user-circle-o" aria-hidden="true"></i> &nbsp;
-    <strong> {{ record.last_name|upper }} {{ record.first_name }} </strong>
+    <div class="d-flex align-items-center mb-3">
+      <i class="fa fa-user-circle-o fa-2x" aria-hidden="true"></i>
+      <h4 class="ms-3 mb-0">
+        <strong>{{ record.last_name|upper }} {{ record.first_name }}</strong>
+      </h4>
+    </div>
+
     <hr style="border: 1px solid #000" />
-    <p><strong> ID: </strong> {{ record.id }}</p>
-    <p><strong> Email: </strong> {{ record.email }}</p>
-    <p><strong> Phone number: </strong> {{ record.phone }}</p>
-    <p><strong> Address: </strong> {{ record.address }}</p>
-    <p><strong> City: </strong> {{ record.city }}</p>
-    <p><strong> Region: </strong> {{ record.region }}</p>
-    <p><strong> Country: </strong> {{ record.country }}</p>
-    <p><strong> Postal Code: </strong> {{ record.postal_code }}</p>
-    <p><strong> Notes: </strong> {{ record.notes }}</p>
-    <p><strong> Creation date: </strong> {{ record.creation_date }}</p>
+
+    <div class="row">
+      <div class="col-md-6">
+        <p><strong>ID:</strong> {{ record.id }}</p>
+        <p><strong>Email:</strong> {{ record.email }}</p>
+        <p><strong>Phone number:</strong> {{ record.phone }}</p>
+        <p><strong>Address:</strong> {{ record.address }}</p>
+      </div>
+      <div class="col-md-6">
+        <p><strong>City:</strong> {{ record.city }}</p>
+        <p><strong>Region:</strong> {{ record.region }}</p>
+        <p><strong>Country:</strong> {{ record.country }}</p>
+        <p><strong>Postal Code:</strong> {{ record.postal_code }}</p>
+        <p><strong>Notes:</strong> {{ record.notes }}</p>
+      </div>
+    </div>
+
+    <p><strong>Creation date:</strong> {{ record.creation_date }}</p>
   </div>
 </div>
 
 <br />
 
-<a href="{% url 'dashboard' %}" class="btn btn-secondary">
-  Return &nbsp; <i class="fa fa-arrow-left" aria-hidden="true"></i>
-</a>
-
-&nbsp;
-
-<a href="{% url 'update-record' record.id %}" class="btn btn-info">
-  Update record &nbsp; <i class="fa fa-pencil" aria-hidden="true"></i>
-</a>
-
-&nbsp;
-
-<a href="{% url 'delete-record' record.id %}" class="btn btn-danger">
-  Delete &nbsp;<i class="fa fa-minus-square" aria-hidden="true"></i>
-</a>
+<div class="d-flex justify-content-between">
+  <a href="{% url 'dashboard' %}" class="btn btn-secondary">
+    Return &nbsp; <i class="fa fa-arrow-left" aria-hidden="true"></i>
+  </a>
+  <div>
+    <a href="{% url 'update-record' record.id %}" class="btn btn-info">
+      Update record &nbsp; <i class="fa fa-pencil" aria-hidden="true"></i>
+    </a>
+    &nbsp;
+    <a href="{% url 'delete-record' record.id %}" class="btn btn-danger">
+      Delete &nbsp;<i class="fa fa-minus-square" aria-hidden="true"></i>
+    </a>
+  </div>
+</div>
 
 {% endblock %}
